--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
     <body>
-    <b>    <a href="./hi.html">Git Task's</a></b>
+    <b>    <a href="./hi.html">Git Task's Day1&Day2</a></b>
     </body>
 </html>
